Set SPDX-License-Identifier to template header

--- a/Fomalhaut2.xcodeproj/xcshareddata/IDETemplateMacros.plist
+++ b/Fomalhaut2.xcodeproj/xcshareddata/IDETemplateMacros.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>FILEHEADER</key>
-	<string></string>
+	<string> SPDX-License-Identifier: GPL-3.0-only</string>
 </dict>
 </plist>
