--- a/Fomalhaut2.xcodeproj/xcshareddata/IDETemplateMacros.plist
+++ b/Fomalhaut2.xcodeproj/xcshareddata/IDETemplateMacros.plist
@@ -3,6 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>FILEHEADER</key>
-	<string> SPDX-License-Identifier: GPL-3.0-only</string>
+	<string> SPDX-FileCopyrightText: 2020 mtgto &lt;hogerappa@gmail.com&gt;
+// SPDX-License-Identifier: GPL-3.0-only</string>
 </dict>
 </plist>
