Disable Realm analytics to suppress warning on startup

--- a/Fomalhaut2.xcodeproj/xcshareddata/xcschemes/Fomalhaut2.xcscheme
+++ b/Fomalhaut2.xcodeproj/xcshareddata/xcschemes/Fomalhaut2.xcscheme
@@ -70,6 +70,13 @@
             ReferencedContainer = "container:Fomalhaut2.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "REALM_DISABLE_ANALYTICS"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
