--- a/Fomalhaut2/Fomalhaut2.entitlements
+++ b/Fomalhaut2/Fomalhaut2.entitlements
@@ -4,9 +4,11 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.files.bookmarks.app-scope</key>
+	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
-	<key>com.apple.security.files.bookmarks.app-scope</key>
+	<key>com.apple.security.network.server</key>
 	<true/>
 </dict>
 </plist>
