--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "node proxy.js",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html --public-url /assets/ && zip -rj ../Fomalhaut2/assets.zip ./dist"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -31,6 +31,7 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.3",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-nuke-dist": "^1.0.1",
     "prettier": "^2.2.1",
     "typescript": "^4.1.2"
   }
