--- a/web/.babelrc
+++ b/web/.babelrc
@@ -1,15 +1,19 @@
 {
   "presets": [
-      ["env", {
-          "targets": {
-              "browsers": [
-                  "last 1 Chrome version",
-                  "last 1 Firefox version",
-                  "last 1 Edge version",
-                  "last 1 Safari version",
-                  "last 1 Opera version"
-              ]
-          }
-      }]
+    [
+      "@babel/env",
+      {
+        "targets": [
+          "last 1 chrome version",
+          "last 1 edge version",
+          "last 1 firefox version",
+          "last 1 safari version",
+          "last 1 ios version",
+          "last 1 android version"
+        ]
+      }
+    ],
+    "@babel/typescript",
+    "@babel/preset-react"
   ]
 }
