--- a/web/package.json
+++ b/web/package.json
@@ -1,12 +1,11 @@
 {
   "name": "web",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "GPL-3.0-only",
   "private": true,
   "scripts": {
-    "dev": "node proxy.js",
-    "build": "parcel build src/index.html --no-source-maps --public-url /assets/ && zip -rj ../Fomalhaut2/assets.zip ./dist"
+    "dev": "parcel serve src/index.html",
+    "build": "parcel build src/index.html --public-url /assets/ && zip -rj ../Fomalhaut2/assets.zip ./dist"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -16,21 +15,21 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-0",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
     "@types/node": "^14.14.10",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-react": "^7.21.5",
-    "express": "^4.17.1",
-    "http-proxy-middleware": "^1.0.6",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.3",
-    "parcel-bundler": "^1.12.4",
+    "parcel": "2.0.0-nightly.476",
     "parcel-plugin-nuke-dist": "^1.0.1",
     "prettier": "^2.2.1",
     "typescript": "^4.1.2"
