--- a/web/package.json
+++ b/web/package.json
@@ -4,8 +4,8 @@
   "license": "GPL-3.0-only",
   "private": true,
   "scripts": {
-    "dev": "parcel serve src/index.html",
-    "build": "parcel build src/index.html --public-url /assets/ && zip -rj ../Fomalhaut2/assets.zip ./dist"
+    "serve": "parcel serve src/index.html",
+    "build": "yarn run rimraf ./dist ../Fomalhaut2/assets.zip && parcel build ./src/index.html --public-url /assets/ && zip -rj ../Fomalhaut2/assets.zip ./dist"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -30,7 +30,6 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.3",
     "parcel": "2.0.0-nightly.476",
-    "parcel-plugin-nuke-dist": "^1.0.1",
     "prettier": "^2.2.1",
     "typescript": "^4.1.2"
   }
