--- a/web/package.json
+++ b/web/package.json
@@ -29,7 +29,7 @@
     "eslint-plugin-react": "^7.21.5",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.3",
-    "parcel": "nightly",
+    "parcel": "^2.0.0-nightly.520",
     "prettier": "^2.2.1",
     "typescript": "^4.1.2"
   }
