--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,10 @@
   "private": true,
   "scripts": {
     "serve": "parcel serve src/index.html",
-    "build": "yarn run rimraf ./dist ../Fomalhaut2/assets.zip && parcel build ./src/index.html --public-url /assets/ && zip -rj9 ../Fomalhaut2/assets.zip ./dist"
+    "build": "yarn run rimraf ./dist ../Fomalhaut2/assets.zip && parcel build ./src/index.html --public-url /assets/ && zip -rj9 ../Fomalhaut2/assets.zip ./dist",
+    "lint": "yarn run lint:tsc && yarn run lint:eslint",
+    "lint:eslint": "eslint '*/**/*.{ts,tsx}'",
+    "lint:tsc": "tsc --noEmit"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
@@ -24,13 +27,15 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.13.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.3",
     "parcel": "^2.0.0-nightly.520",
     "prettier": "^2.2.1",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.3"
   }
 }
