--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -7,12 +7,13 @@ on:
 jobs:
   lint:
     name: Lint
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
-          fetch-depth: 0
+          node-version: 14
       - name: yarn install
         run: yarn install
         working-directory: ./web
