--- a/Fomalhaut2/Info.plist
+++ b/Fomalhaut2/Info.plist
@@ -22,7 +22,7 @@
 				<string>com.pkware.zip-archive</string>
 			</array>
 			<key>NSDocumentClass</key>
-			<string>$(PRODUCT_MODULE_NAME).ZipDocument</string>
+			<string>$(PRODUCT_MODULE_NAME).BookDocument</string>
 		</dict>
 		<dict>
 			<key>CFBundleTypeExtensions</key>
@@ -41,7 +41,7 @@
 				<string>com.yacreader.yacreader.cbz</string>
 			</array>
 			<key>NSDocumentClass</key>
-			<string>$(PRODUCT_MODULE_NAME).ZipDocument</string>
+			<string>$(PRODUCT_MODULE_NAME).BookDocument</string>
 		</dict>
 		<dict>
 			<key>CFBundleTypeName</key>
@@ -55,7 +55,7 @@
 				<string>public.folder</string>
 			</array>
 			<key>NSDocumentClass</key>
-			<string>$(PRODUCT_MODULE_NAME).FolderDocument</string>
+			<string>$(PRODUCT_MODULE_NAME).BookDocument</string>
 		</dict>
 		<dict>
 			<key>CFBundleTypeExtensions</key>
@@ -73,7 +73,7 @@
 				<string>com.adobe.pdf</string>
 			</array>
 			<key>NSDocumentClass</key>
-			<string>$(PRODUCT_MODULE_NAME).PdfDocument</string>
+			<string>$(PRODUCT_MODULE_NAME).BookDocument</string>
 		</dict>
 		<dict>
 			<key>CFBundleTypeExtensions</key>
@@ -91,7 +91,7 @@
 				<string>com.rarlab.rar-archive</string>
 			</array>
 			<key>NSDocumentClass</key>
-			<string>$(PRODUCT_MODULE_NAME).RarDocument</string>
+			<string>$(PRODUCT_MODULE_NAME).BookDocument</string>
 		</dict>
 		<dict>
 			<key>CFBundleTypeExtensions</key>
@@ -110,7 +110,7 @@
 				<string>com.yacreader.yacreader.cbr</string>
 			</array>
 			<key>NSDocumentClass</key>
-			<string>$(PRODUCT_MODULE_NAME).RarDocument</string>
+			<string>$(PRODUCT_MODULE_NAME).BookDocument</string>
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
