--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,10 @@
     "@babel/preset-env": "^7.12.10",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
+    "@parcel/optimizer-htmlnano": "2.0.0-nightly.594",
+    "@parcel/packager-html": "2.0.0-nightly.594",
+    "@parcel/transformer-html": "2.0.0-nightly.594",
+    "@parcel/transformer-posthtml": "2.0.0-nightly.594",
     "@types/node": "^14.14.10",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
