Handle an error while loading images from selected file

--- a/Fomalhaut2QuickLook/Info.plist
+++ b/Fomalhaut2QuickLook/Info.plist
@@ -32,6 +32,7 @@
 				<string>com.rarlab.rar-archive</string>
 				<string>net.mtgto.Fomalhaut2.cbz</string>
 				<string>com.pkware.zip-archive</string>
+				<string>public.zip-archive</string>
 				<string>public.data</string>
 			</array>
 			<key>QLSupportsSearchableItems</key>
