Set QLSupportsSearchableItems to true

--- a/Fomalhaut2QuickLook/Info.plist
+++ b/Fomalhaut2QuickLook/Info.plist
@@ -35,6 +35,8 @@
 				<string>public.zip-archive</string>
 				<string>public.data</string>
 			</array>
+			<key>QLSupportsSearchableItems</key>
+			<true/>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.quicklook.preview</string>
