--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -15,6 +15,15 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: yarn-
       - name: yarn install
         run: yarn install
         working-directory: ./web
