--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -22,12 +22,14 @@ jobs:
         id: yarn-cache
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: yarn-
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+        working-directory: ./web
       - name: yarn install
         run: yarn install
-        working-directory: ./web
         if: steps.yarn-cache.outputs.cache-hit != 'true'
+        working-directory: ./web
       - name: "install @jamesacarr/eslint-formatter-github-actions"
         run: yarn add -D @jamesacarr/eslint-formatter-github-actions
       - name: Lint
