--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -18,20 +18,18 @@ jobs:
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
+        working-directory: ./web
       - uses: actions/cache@v2
-        id: yarn-cache
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-        working-directory: ./web
       - name: yarn install
         run: yarn install
-        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        if: ${{ steps.yarn-cache.outputs.cache-hit != 'true' }}
         working-directory: ./web
-      - name: "install @jamesacarr/eslint-formatter-github-actions"
-        run: yarn add -D @jamesacarr/eslint-formatter-github-actions
       - name: Lint
         run: yarn lint
         working-directory: ./web
