--- a/web/package.json
+++ b/web/package.json
@@ -36,7 +36,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.3",
-    "parcel": "^2.0.0-nightly.603",
+    "parcel": "^2.0.0-beta.2",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
