--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -20,15 +20,14 @@ jobs:
         run: echo "::set-output name=dir::$(yarn cache dir)"
         working-directory: ./web
       - uses: actions/cache@v2
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        id: yarn-cache
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
       - name: yarn install
-        run: yarn install
-        if: ${{ steps.yarn-cache.outputs.cache-hit != 'true' }}
+        run: yarn --prefer-offline
         working-directory: ./web
       - name: Lint
         run: yarn lint
