--- a/web/.babelrc
+++ b/web/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
     [
-      "@babel/env",
+      "@babel/preset-env",
       {
         "targets": [
           "last 1 chrome version",
