--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,6 @@ jobs:
         p12-file-base64: ${{ secrets.CERTIFICATES_P12 }}
         p12-password: ${{ secrets.CERTIFICATES_P12_PASSWORD }}
     - name: test
-      run: xcodebuild -target Fomalhaut2Tests -scheme Fomalhaut2 test
-      env:
-        DEVELOPMENT_TEAM: ""
-        PROFILE_PATH: ""
+      run: |
+        touch Fomalhaut2/assets.zip
+        set -o pipefail && xcodebuild -target Fomalhaut2Tests -scheme Fomalhaut2 -clonedSourcePackagesDirPath .cache test | xcpretty
