Use actions/cache to reduce resolving SPM packages

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,17 @@ jobs:
       with: 
         p12-file-base64: ${{ secrets.CERTIFICATES_P12 }}
         p12-password: ${{ secrets.CERTIFICATES_P12_PASSWORD }}
+    - uses: actions/cache@v2
+      id: cache
+      with:
+        path: .build
+        key: ${{ runner.os }}-spm-${{ hashFiles('Fomalhaut2.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/Package.resolved') }}
+        restore-keys: |
+          ${{ runner.os }}-spm-
+    - name: resolve packages
+      run: xcodebuild -resolvePackageDependencies -clonedSourcePackagesDirPath .build
+      if: steps.cache.outputs.cache-hit != 'true'
     - name: test
       run: |
         touch Fomalhaut2/assets.zip
-        set -o pipefail && xcodebuild -target Fomalhaut2Tests -scheme Fomalhaut2 -clonedSourcePackagesDirPath .cache test | xcpretty
+        set -o pipefail && xcodebuild -target Fomalhaut2Tests -scheme Fomalhaut2 -clonedSourcePackagesDirPath .build clean test | xcpretty
