Update material-ui to v5 alpha

--- a/web/.babelrc
+++ b/web/.babelrc
@@ -14,6 +14,11 @@
       }
     ],
     "@babel/typescript",
-    "@babel/preset-react"
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ]
   ]
 }
