--- a/web/package.json
+++ b/web/package.json
@@ -12,12 +12,13 @@
     "prepare": "cd .. && husky install web/.husky"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
+    "@material-ui/core": "^5.0.0",
+    "@material-ui/icons": "^5.0.0",
     "history": "^5.0.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "rocon": "^1.2.0"
   },
   "devDependencies": {
@@ -27,8 +28,8 @@
     "@babel/preset-typescript": "^7.12.7",
     "@jamesacarr/eslint-formatter-github-actions": "^0.1.0",
     "@types/node": "^14.14.10",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.9.9",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.13.0",
     "eslint": "^7.16.0",
