--- a/web/.babelrc
+++ b/web/.babelrc
@@ -20,5 +20,14 @@
         "runtime": "automatic"
       }
     ]
+  ],
+  "plugins": [
+    "@emotion/babel-plugin",
+    [
+      "@babel/plugin-transform-react-jsx",
+      {
+        "runtime": "automatic"
+      }
+    ]
   ]
 }
