--- a/web/package.json
+++ b/web/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
-    "@material-ui/core": "next",
-    "@material-ui/icons": "next",
+    "@material-ui/core": "^5.0.0-alpha.35",
+    "@material-ui/icons": "^5.0.0-alpha.35",
     "history": "^5.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -36,9 +36,9 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "5",
+    "husky": "^6",
     "lint-staged": "^10.5.3",
-    "parcel": "^2.0.0-nightly.636",
+    "parcel": "^2.0.0-beta.3.1",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
