--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-env": "^7.12.10",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
+    "@emotion/babel-preset-css-prop": "^11.2.0",
     "@jamesacarr/eslint-formatter-github-actions": "^0.1.0",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
