--- a/web/package.json
+++ b/web/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
-    "@material-ui/core": "^5.0.0-alpha.35",
-    "@material-ui/icons": "^5.0.0-alpha.35",
+    "@material-ui/core": "^5.0.0-beta.4",
+    "@material-ui/icons": "^5.0.0-beta.4",
     "history": "^5.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -39,7 +39,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6",
     "lint-staged": "^10.5.3",
-    "parcel": "^2.0.0-beta.3.1",
+    "parcel": "^2.0.0-rc.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
