--- a/web/package.json
+++ b/web/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
-    "@material-ui/core": "^5.0.0-beta.4",
-    "@material-ui/icons": "^5.0.0-beta.4",
+    "@mui/material": "^5.0.0",
+    "@mui/icons-material": "^5.0.0",
     "history": "^5.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
