--- a/web/.babelrc
+++ b/web/.babelrc
@@ -1,21 +1,4 @@
 {
-  "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "targets": [
-          "last 1 chrome version",
-          "last 1 edge version",
-          "last 1 firefox version",
-          "last 1 safari version",
-          "last 1 ios version",
-          "last 1 android version"
-        ]
-      }
-    ],
-    "@babel/typescript",
-    "@babel/preset-react",
-    "@emotion/babel-preset-css-prop"
-  ],
+  "presets": ["@emotion/babel-preset-css-prop"],
   "plugins": ["@emotion/babel-plugin"]
 }
