--- a/web/package.json
+++ b/web/package.json
@@ -42,5 +42,13 @@
     "parcel": "^2.0.0-rc.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
-  }
+  },
+  "browserslist": [
+    "last 1 chrome version",
+    "last 1 edge version",
+    "last 1 firefox version",
+    "last 1 safari version",
+    "last 1 ios version",
+    "last 1 android version"
+  ]
 }
