--- a/web/package.json
+++ b/web/package.json
@@ -39,7 +39,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7",
     "lint-staged": "^11.1.2",
-    "parcel": "^2.0.0-rc.0",
+    "parcel": "^2.0.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   },
