--- a/web/package.json
+++ b/web/package.json
@@ -37,6 +37,7 @@
     "lint-staged": "^11.1.2",
     "parcel": "^2.0.0",
     "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
     "typescript": "^4.1.3"
   },
   "browserslist": [
@@ -46,5 +47,6 @@
     "last 1 safari version",
     "last 1 ios version",
     "last 1 android version"
-  ]
+  ],
+  "packageManager": "yarn@3.1.1"
 }
