--- a/web/package.json
+++ b/web/package.json
@@ -14,31 +14,31 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.0.0",
-    "@mui/material": "^5.0.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.8",
     "history": "^5.0.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "rocon": "^1.2.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "rocon": "1.2.5"
   },
   "devDependencies": {
     "@emotion/babel-preset-css-prop": "^11.2.0",
     "@jamesacarr/eslint-formatter-github-actions": "^0.1.0",
-    "@types/node": "^14.14.10",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
-    "eslint": "^8.5.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^7",
-    "lint-staged": "^11.1.2",
-    "parcel": "^2.0.0",
-    "prettier": "^2.2.1",
+    "@types/node": "^16.11.20",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.7",
+    "parcel": "^2.2.0",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "typescript": "^4.1.3"
+    "typescript": "^4.5.4"
   },
   "browserslist": [
     "last 1 chrome version",
