Update web packages

--- a/web/package.json
+++ b/web/package.json
@@ -12,32 +12,33 @@
     "prepare": "cd .. && husky install web/.husky"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.8.0",
-    "@mui/material": "^5.8.0",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.10.0",
     "history": "^5.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rocon": "^1.2.5"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rocon": "^1.2.8"
   },
   "devDependencies": {
     "@jamesacarr/eslint-formatter-github-actions": "^0.1.0",
-    "@types/node": "^16.11.36",
-    "@types/react": "^17.0.45",
+    "@types/node": "^16.11.48",
+    "@types/react": "^18.0.17",
     "@types/react-dom": "^17.0.17",
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
-    "eslint": "^8.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
-    "lint-staged": "^12.4.1",
-    "parcel": "^2.5.0",
-    "prettier": "^2.6.2",
+    "lint-staged": "^13.0.3",
+    "parcel": "^2.7.0",
+    "prettier": "^2.7.1",
+    "process": "^0.11.10",
     "rimraf": "^3.0.2",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.4"
   },
   "browserslist": [
     "last 1 chrome version",
