--- a/web/package.json
+++ b/web/package.json
@@ -4,8 +4,8 @@
   "license": "GPL-3.0-only",
   "private": true,
   "scripts": {
-    "serve": "parcel serve src/index.html",
-    "build": "yarn run rimraf ./dist ../Fomalhaut2/assets.zip && parcel build ./src/index.html --public-url /assets/ && zip -rj9 ../Fomalhaut2/assets.zip ./dist",
+    "serve": "vite",
+    "build": "yarn run rimraf ../Fomalhaut2/assets.zip && vite build && zip -rj9 ../Fomalhaut2/assets.zip ./dist",
     "lint": "yarn run lint:tsc && yarn run lint:eslint",
     "lint:eslint": "eslint ${ESLINT_ARGS:-''} '*/**/*.{ts,tsx}'",
     "lint:tsc": "tsc --noEmit",
@@ -28,25 +28,17 @@
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
+    "@vitejs/plugin-react": "^2.1.0",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.31.7",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "parcel": "^2.7.0",
     "prettier": "^2.7.1",
-    "process": "^0.11.10",
     "rimraf": "^3.0.2",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "vite": "^3.1.3"
   },
-  "browserslist": [
-    "last 1 chrome version",
-    "last 1 edge version",
-    "last 1 firefox version",
-    "last 1 safari version",
-    "last 1 ios version",
-    "last 1 android version"
-  ],
   "packageManager": "yarn@3.2.0"
 }
