--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -5,6 +5,10 @@ on:
   pull_request:
     branches: [main]
 
+defaults:
+  run:
+    working-directory: ./web
+
 jobs:
   lint:
     name: Lint
@@ -14,23 +18,11 @@ jobs:
         uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 14
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
-        working-directory: ./web
-      - uses: actions/cache@v3
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-      - name: yarn install
-        run: yarn
-        working-directory: ./web
+          node-version: 18
+          cache: pnpm
+      - name: pnpm install
+        run: pnpm install
       - name: Lint
-        run: yarn lint
-        working-directory: ./web
+        run: pnpm run lint
         env:
           ESLINT_ARGS: "-f @jamesacarr/github-actions"
