--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -20,8 +20,10 @@ jobs:
         with:
           node-version: 18
           cache: pnpm
-      - name: pnpm install
-        run: pnpm install
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+          run_install: true
       - name: Lint
         run: pnpm run lint
         env:
