Set cache-dependency-path

--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           node-version: 18
           cache: pnpm
+          cache-dependency-path: web/pnpm-lock.yaml
       - name: Lint
         run: pnpm run lint
         env:
