--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "license": "GPL-3.0-only",
   "private": true,
+  "type": "module",
   "scripts": {
     "serve": "vite",
     "build": "pnpm exec rimraf ../Fomalhaut2/assets.zip && vite build && zip -rj9 ../Fomalhaut2/assets.zip ./dist",
@@ -12,10 +13,10 @@
     "prepare": "cd .. && husky install web/.husky"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.12",
-    "@mui/material": "^5.14.12",
+    "@mui/icons-material": "^5.15.2",
+    "@mui/material": "^5.15.2",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,21 +25,21 @@
   },
   "devDependencies": {
     "@jamesacarr/eslint-formatter-github-actions": "^0.2.0",
-    "@types/node": "^18.18.4",
-    "@types/react": "^18.2.25",
-    "@types/react-dom": "^18.2.11",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "@vitejs/plugin-react": "^4.1.0",
-    "eslint": "^8.51.0",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
+    "lint-staged": "^15.2.0",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.5",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.11"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10"
   }
 }
