--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
         with:
+          version: 9
           run_install: true
       - uses: actions/setup-node@v4
         with:
