--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,4 @@ jobs:
     - name: test
       run: |
         cp Fomalhaut2Tests/fixture/empty.zip Fomalhaut2/assets.zip
-        set -o pipefail && xcodebuild -target Fomalhaut2Tests -scheme Fomalhaut2 -clonedSourcePackagesDirPath DEVELOPMENT_TEAM= .build clean test | xcpretty
+        set -o pipefail && xcodebuild -target Fomalhaut2Tests -scheme Fomalhaut2 -clonedSourcePackagesDirPath .build DEVELOPMENT_TEAM= clean test | xcpretty
